[package]
name = "p-user"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "p-user"

[dependencies]
p-common = { git = "https://github.com/rsfunc/p-common.git" }
p-web = { git = "https://github.com/rsfunc/p-web.git" }
actix-web = "4.4.0"
serde={ version = "1.0.188", features = ["derive"] }

# you should disable on check in
[patch."https://github.com/rsfunc/p-web.git"]
p-web = { path = "../p-web" }
